[tool.poetry]
name = "planning-playground"
version = "0.1.0"
description = "This is a planning playground for learning motion and task planning"
authors = ["Filip Kernan <filip.kernan@gmail.com>"]
readme = "README.md"
packages = [{include = "planning_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.7.0"
opencv-python = "^4.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
networkx = "^3.3"
scipy = "^1.13.1"
shapely = "^2.0.4"
triangle = "^20230923"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
